--- a/conf/config-dev.yml
+++ b/conf/config-dev.yml
@@ -13,13 +13,13 @@ system:
 
 mysql:
   # 用户名
-  username: anew
+  username: liujb
   # 密码
-  password: anew@123
+  password: rdbdQdz#1p0%mjwV
   # 数据库名
-  database: anew_db
+  database: devops_newdb_dev
   # 主机地址
-  host: 192.168.56.100
+  host: atfx2-dev.cey5cywit5mk.ap-east-1.rds.amazonaws.com
   # 端口
   port: 3306
   # 连接字符串查询参数
@@ -35,9 +35,9 @@ mysql:
 
 redis:
   # 地址
-  host: 192.168.56.100
+  host: 127.0.0.1
   # 密码
-  password: fabao123
+  password: yijunzi2019
   # 数据库index
   db: 0
   # 端口
